<resources>
    <string name="app_name">SongsL08</string>
    <string name="boy_group_songs">Boy Group Songs</string>
    <string name="song_title">Song Title</string>
    <string name="enter_song_title_here">enter song title here</string>
    <string name="singer">Singer</string>
    <string name="enter_singer_name_here">enter singer name here</string>
    <string name="year">Year</string>
    <string name="enter_year_of_release_here">enter year of release here</string>
    <string name="stars">Stars</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="insert">INSERT</string>
    <string name="show_list">SHOW LIST</string>
    <string name="update">UPDATE</string>
    <string name="delete">DELETE</string>
    <string name="show_all_songs_with_5_stars">SHOW ALL SONGS WITH 5 STARS</string>
    <string name="show_all_songs">SHOW ALL SONGS</string>
    <string name="back">Back</string>
</resources>